--- a/index.html
+++ b/index.html
@@ -200,6 +200,71 @@
       transition: left 0.3s ease;
     }
 
+    /* Panel de leyenda inferior */
+    .legend-panel {
+      position: fixed;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      background-color: #f0f0f0;
+      box-shadow: 0 -4px 12px rgba(0, 0, 0, 0.1);
+      padding: 15px;
+      text-align: center;
+      transition: transform 0.3s ease;
+      transform: translateY(100%);
+      z-index: 1000;
+      border-top: 2px solid #e0e0e0;
+    }
+
+    .legend-panel.visible {
+      transform: translateY(0);
+    }
+
+    .legend-item {
+      display: inline-block;
+      margin-right: 20px;
+      font-size: 14px;
+      font-weight: 600;
+      cursor: pointer;
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+    }
+
+    .legend-item.selected {
+      transform: scale(1.1);
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    }
+
+    .legend-color-box {
+      display: inline-block;
+      width: 24px;
+      height: 24px;
+      margin-right: 8px;
+      vertical-align: middle;
+      border-radius: 50%;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    }
+
+    /* Botón de acción de la leyenda ajustado a un tamaño más pequeño */
+    .toggle-legend-btn {
+      position: fixed;
+      bottom: 20px;
+      left: 50%;
+      transform: translateX(-50%);
+      background-color: #3498db;
+      color: white;
+      padding: 6px 10px;
+      border: none;
+      border-radius: 15px;
+      cursor: pointer;
+      font-size: 12px;
+      z-index: 1100;
+      transition: bottom 0.3s ease;
+    }
+
+    .toggle-legend-btn:hover {
+      background-color: #2980b9;
+    }
+
     /* Popup de resumen */
     .popup-overlay {
       position: fixed;
@@ -362,6 +427,16 @@
     </div>
   </div>
 
+  <!-- Botón para mostrar la leyenda -->
+  <button class="toggle-legend-btn" id="toggleLegendBtn" onclick="toggleLegend()">Mostrar Leyenda</button>
+
+  <!-- Panel de leyenda oculto inicialmente -->
+  <div id="legendPanel" class="legend-panel">
+    <div id="legendContent">
+      <!-- Aquí se mostrarán los elementos de la leyenda -->
+    </div>
+  </div>
+
   <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.0/papaparse.min.js"></script>
   <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
@@ -450,6 +525,28 @@
       sidebar.classList.remove('blurred');  // Quitar el blur a la barra lateral
     }
 
+    function toggleSidebar() {
+      sidebar.classList.toggle('visible');
+    }
+
+    function toggleLegend() {
+      const legendPanel = document.getElementById('legendPanel');
+      legendPanel.classList.toggle('visible');
+      const legendButton = document.querySelector('.toggle-legend-btn');
+      if (legendPanel.classList.contains('visible')) {
+        legendButton.innerText = 'Ocultar Leyenda';
+      } else {
+        legendButton.innerText = 'Mostrar Leyenda';
+      }
+    }
+
+    // Inicializar el mapa
+    let map = L.map('map').setView([28.0665, -16.7332], 13);
+
+    L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+      attribution: 'Map data &copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap',
+      maxZoom: 18,
+    }).addTo(map);
   </script>
 
 </body>
